# system_control

./: .gitignore  README.md  main.py  mouse_control.py  setup.cfg
system_control/: actions.py  processor.py  system_control.py
system_control/hand_movements/: mouse_control.py
system_control/movement_trackers/: mouse_control.py  movement_tracker.py  volume_control.py
