[metadata]
name = system_control
version = 0.0.1
author = Prayuj Tuli
author_email = prayujtuli@hotmail.com
description = An implementation of Linux system control through offline speech recognition and computer vision
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prayujt/system_control
project_urls =
    Bug Tracker = https://github.com/prayujt/system_control/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    opencv-python
    mediapipe
    vosk
    numpy
    pulsectl

[options.entry_points]
console_scripts =
    sysctrl = system_control.system_control:main
